8/25 AC05 닉네임 중복 여부 조회 API 수정 messages.properties 수정

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 api.success=성공
-api.error.bad_request=잘못된 요청입니다
+api.error.bad_request=잘못된 요청입니다: {0}
 api.error.server=서버에 오류가 발생하였습니다
 api.error.db=데이터베이스 연결에 실패하였습니다
 
