--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 api.success=성공
 api.error.bad_request=잘못된 요청입니다: {0}
+api.error.argument=잘못된 요청 파라미터입니다: {0}
 api.error.server=서버에 오류가 발생하였습니다
 api.error.db=데이터베이스 연결에 실패하였습니다
 
 validation.nickname.size=닉네임은 2~8자 사이여야 합니다
 validation.nickname.pattern=닉네임은 숫자, 영문, 한글만 사용할 수 있습니다
-validation.language.pattern=지원하지 않는 언어입니다.
