--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 api.success=성공
 api.error.bad_request=잘못된 요청입니다: {0}
-api.error.argument=잘못된 요청 파라미터입니다: {0}
+api.error.argument=잘못된 요청 파라미터입니다
 api.error.server=서버에 오류가 발생하였습니다
 api.error.db=데이터베이스 연결에 실패하였습니다
 
