AC09 이메일 인증코드 검증

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,5 +10,5 @@ validation.nickname.pattern=닉네임은 숫자, 영문, 한글만 사용할 수
 validation.email.blank=이메일은 필수 입력입니다.
 validation.email.pattern=이메일 형식이 올바르지 않습니다.
 validation.email.size=이메일은 최대 50자까지 입력 가능합니다.
-validation.verification_code.size=인증코드는 최대 32자까지 생성 가능합니다.
-validation.verification_code.blank=인증코드는 최소 1자 이상의 길이가 필요합니다.
+validation.verification_code.size=인증코드는 정확히 8자리여야 합니다.
+validation.verification_code.blank=인증코드 형식이 올바르지 않습니다.
