--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,10 +5,27 @@ api.error.server=서버에 오류가 발생하였습니다
 api.error.data_missing = 데이터가 존재하지 않습니다
 api.error.db=데이터베이스 연결에 실패하였습니다
 
+validation.firstName.blank=성은 필수 입력입니다.
+validation.firstName.size=성은 최대 10자까지 입력할 수 있습니다.
+validation.middleName.size=중간이름은 최대 20자까지 입력할 수 있습니다.
+validation.lastName.blank=이름은 필수 입력입니다.
+validation.lastName.size=이름은 최대 20자까지 입력할 수 있습니다.
+
+validation.nickname.blank=닉네임은 필수 입력입니다.
 validation.nickname.size=닉네임은 2~8자 사이여야 합니다
 validation.nickname.pattern=닉네임은 숫자, 영문, 한글만 사용할 수 있습니다
+
 validation.email.blank=이메일은 필수 입력입니다.
 validation.email.pattern=이메일 형식이 올바르지 않습니다.
 validation.email.size=이메일은 최대 50자까지 입력 가능합니다.
-validation.verification_code.size=인증코드는 정확히 8자리여야 합니다.
-validation.verification_code.blank=인증코드 형식이 올바르지 않습니다.
+
+validation.password.blank=비밀번호는 필수 입력입니다.
+validation.password.size=비밀번호는 8~16자 사이여야 합니다.
+validation.password.complexity=비밀번호는 대문자/소문자/숫자/특수문자를 모두 포함해야 합니다.
+validation.password.repetition=비밀번호에 동일 문자를 3회 이상 연속으로 사용할 수 없습니다.
+
+validation.verification_code.blank=인증코드는 필수 입력입니다.
+validation.verification_code.pattern=인증코드는 대문자와 숫자 8자리여야 합니다.
+
+validation.countryCode.blank=국가 코드는 필수 입력입니다.
+validation.phoneNumber.blank=전화번호는 필수 입력입니다.
