--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,7 +25,7 @@ validation.password.complexity=비밀번호는 대문자/소문자/숫자/특수
 validation.password.repetition=비밀번호에 동일 문자를 3회 이상 연속으로 사용할 수 없습니다.
 
 validation.verification_code.blank=인증코드는 필수 입력입니다.
-validation.verification_code.pattern=인증코드는 대문자와 숫자 8자리여야 합니다.
 
+validation.groupCode.blank=그룹코드는 필수 사항입니다.
 validation.countryCode.blank=국가 코드는 필수 입력입니다.
 validation.phoneNumber.blank=전화번호는 필수 입력입니다.
