requestDto수정 UserVo수정 -> insert용 UserVo로 변경 응답 객체 수정

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,7 +25,15 @@ validation.password.complexity=비밀번호는 대문자/소문자/숫자/특수
 validation.password.repetition=비밀번호에 동일 문자를 3회 이상 연속으로 사용할 수 없습니다.
 
 validation.verification_code.blank=인증코드는 필수 입력입니다.
-
-validation.groupCode.blank=그룹코드는 필수 사항입니다.
-validation.countryCode.blank=국가 코드는 필수 입력입니다.
+validation.groupCode.blank=그룹코드는 필수 입력입니다.
+validation.countryCode.null=국가 코드는 필수 입력입니다.
 validation.phoneNumber.blank=전화번호는 필수 입력입니다.
+validation.code.blank=코드는 필수 입력입니다.
+
+signUp.success=회원가입에 성공했습니다.
+signUp.duplicateNickname=이미 존재하는 닉네임입니다.
+signUp.emailVerificationFailed=인증되지 않은 이메일입니다.
+signUp.duplicateEmail=이미 존재하는 이메일입니다.
+signUp.duplicateNameAndPhone=이미 존재하는 이름과 전화번호입니다.
+signUp.invalidCountryCode=유효하지 않은 국가 코드입니다.
+signUp.invalidPhoneNumber=유효하지 않은 전화번호입니다.
