--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,10 +30,9 @@ validation.countryCode.null=국가 코드는 필수 입력입니다.
 validation.phoneNumber.blank=전화번호는 필수 입력입니다.
 validation.code.blank=코드는 필수 입력입니다.
 
-signUp.success=회원가입에 성공했습니다.
 signUp.duplicateNickname=이미 존재하는 닉네임입니다.
 signUp.emailVerificationFailed=인증되지 않은 이메일입니다.
 signUp.duplicateEmail=이미 존재하는 이메일입니다.
-signUp.duplicateNameAndPhone=이미 존재하는 이름과 전화번호입니다.
+signUp.duplicateNameAndPhoneNumber=이미 존재하는 이름과 전화번호입니다.
 signUp.invalidCountryCode=유효하지 않은 국가 코드입니다.
 signUp.invalidPhoneNumber=유효하지 않은 전화번호입니다.
