--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 api.success=성공
-api.error.bad_request=잘못된 요청입니다: {0}
+api.error.bad_request={0}
 api.error.argument=잘못된 요청 파라미터입니다
 api.error.server=서버에 오류가 발생하였습니다
 api.error.data_missing = 데이터가 존재하지 않습니다
