AC01 로그인API 개발

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,3 +36,6 @@ signUp.duplicateEmail=이미 존재하는 이메일입니다.
 signUp.duplicateNameAndPhoneNumber=이미 존재하는 이름과 전화번호입니다.
 signUp.invalidCountryCode=유효하지 않은 국가 코드입니다.
 signUp.invalidPhoneNumber=유효하지 않은 전화번호입니다.
+
+login.notFoundUser = 올바른 이메일과 비밀번호를 입력해주세요.
+login.inactiveUser = 5회 이상 로그인 실패로 인해 계정이 비활성화 되었습니다. 비밀번호를 재설정 해주세요.
