AC04 로그인 상태 조회 API 개발

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ api.error.argument=잘못된 요청 파라미터입니다
 api.error.server=서버에 오류가 발생하였습니다
 api.error.data_missing = 데이터가 존재하지 않습니다
 api.error.db=데이터베이스 연결에 실패하였습니다
+api.error.session=존재하지 않는 사용자입니다.
+api.error.not_login_status=로그인이 필요합니다.
 
 validation.firstName.blank=성은 필수 입력입니다.
 validation.firstName.size=성은 최대 10자까지 입력할 수 있습니다.
