세션 저장 정보 구조 수정 로그아웃, 자동로그인 실패시 쿠키의 자동로그인 토큰 제거 자동로그인 계정 상태 로직 추가 계정 비활성화, 잠금 상태 응답 추가

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 api.success=성공
+api.error.lock_login_status=계정이 잠금 상태입니다.
+api.error.inactive_login_status=계정이 비활성화 상태입니다.
 api.error.bad_request={0}
 api.error.argument=잘못된 요청 파라미터입니다
 api.error.server=서버에 오류가 발생하였습니다
