--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,3 +43,5 @@ signUp.invalidPhoneNumber=유효하지 않은 전화번호입니다.
 
 login.notFoundUser = 올바른 이메일과 비밀번호를 입력해주세요.
 login.inactiveUser = 5회 이상 로그인 실패로 인해 계정이 비활성화 되었습니다. 비밀번호를 재설정 해주세요.
+
+findUserAccount.notFoundUser = 계정 정보를 찾을 수 없습니다.
