AC16 닉네임 변경 api 개발

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -45,5 +45,8 @@ login.notFoundUser = 올바른 이메일과 비밀번호를 입력해주세요.
 login.inactiveUser = 5회 이상 로그인 실패로 인해 계정이 비활성화 되었습니다. 비밀번호를 재설정 해주세요.
 
 findUserAccount.notFoundUser = 계정 정보를 찾을 수 없습니다.
+
 changePassword.wrongPassword = 올바른 비밀번호를 입력해주세요.
 changePassword.sameAsCurrentPassword = 현재 비밀번호와 동일한 비밀번호로 변경 할 수 없습니다.
+
+changeNickname.sameAsCurrentNickname = 동일한 닉네임으로 변경 할 수 없습니다.
