requestDto 삭제 메서드 명 수정

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,6 +34,8 @@ validation.countryCode.null=국가 코드는 필수 입력입니다.
 validation.phoneNumber.blank=전화번호는 필수 입력입니다.
 validation.code.blank=코드는 필수 입력입니다.
 
+validation.notification_id_list.empty = 알림 ID 목록은 비어 있을 수 없습니다.
+
 signUp.duplicateNickname=이미 존재하는 닉네임입니다.
 signUp.emailVerificationFailed=인증되지 않은 이메일입니다.
 signUp.duplicateEmail=이미 존재하는 이메일입니다.
@@ -50,5 +52,3 @@ changePassword.wrongPassword = 올바른 비밀번호를 입력해주세요.
 changePassword.sameAsCurrentPassword = 현재 비밀번호와 동일한 비밀번호로 변경 할 수 없습니다.
 
 changeNickname.sameAsCurrentNickname = 동일한 닉네임으로 변경 할 수 없습니다.
-
-notice.emptyIdList = 알림 ID 목록은 비어 있을 수 없습니다.
