메서드명 수정 예외처리 수정

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ validation.phoneNumber.blank=전화번호는 필수 입력입니다.
 validation.code.blank=코드는 필수 입력입니다.
 
 validation.notification_id_list.empty = 알림 ID 목록은 비어 있을 수 없습니다.
+notification.notValidNoticeNoList = 올바른 알림 목록이 아닙니다.
 
 signUp.duplicateNickname=이미 존재하는 닉네임입니다.
 signUp.emailVerificationFailed=인증되지 않은 이메일입니다.
