RC02 최근 인기 레시피 목록 조회 개발

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,3 +53,5 @@ changePassword.wrongPassword = 올바른 비밀번호를 입력해주세요.
 changePassword.sameAsCurrentPassword = 현재 비밀번호와 동일한 비밀번호로 변경 할 수 없습니다.
 
 changeNickname.sameAsCurrentNickname = 동일한 닉네임으로 변경 할 수 없습니다.
+
+Recipe.list.size.min = 올바른 조회할 레시피 수를 지정해주세요.
