--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,6 +72,7 @@ validation.recipe.description.blank=레시피 설명은 필수 입력입니다.
 validation.recipe.description.size=레시피 설명은 최대 200자까지 입력 가능합니다.
 
 validation.recipe.category.blank=레시피 카테고리는 필수 입력입니다.
+validation.recipe.category.status.blank=변경할 상태코드는 필수 입력입니다.
 
 validation.recipe.cookingTime.null=조리 시간은 필수 입력입니다.
 validation.recipe.cookingTime.size=조리 시간은 최대 3자리 숫자까지 입력 가능합니다.
