--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,6 +57,7 @@ changeNickname.sameAsCurrentNickname = 동일한 닉네임으로 변경 할 수 
 recipe.list.size.min = 올바른 조회할 레시피 수를 지정해주세요.
 recipe.list.page.min = 올바른 조회할 목록 수를 지정해주세요.
 recipe.notFoundRecipe = 존재하지 않는 레시피입니다.
+recipe.invalidUser = 해당 레시피의 작성자가 아닙니다.
 recipe.page.null = 조회할 페이지 번호를 지정해주세요.
 recipe.size.null = 조회할 목록 수를 지정해주세요.
 
